Backport patch to fix a quadratic slow down in the BFD library.

PR 28058
bfd	* elf.c (bfd_section_from_shdr): Set has_secondary_relocs flag.
	(_bfd_elf_slurp_secondary_reloc_section): Use it for early-out.